// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawing Layer Components Ellipse adds a ellipse 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <ellipse
    cx="10"
    cy="10"
    fill="#cccccc"
    pointer-events="visible"
    rx="10"
    ry="10"
    stroke="#888888"
    stroke-dasharray=""
    stroke-width="1"
  />
</svg>
`;

exports[`Drawing Layer Components Ellipse deletes a ellipse 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
/>
`;

exports[`Drawing Layer Components Ellipse moves a ellipse 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <ellipse
    cx="5"
    cy="5"
    fill="#cccccc"
    pointer-events="visible"
    rx="10"
    ry="10"
    stroke="#888888"
    stroke-dasharray=""
    stroke-width="1"
  />
</svg>
`;

exports[`Drawing Layer Components Freehand Line adds a freehand line 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M 10 10 l 1 1 l 2 2"
    fill="none"
    pointer-events="visible"
    stroke="#888888"
    stroke-dasharray=""
    stroke-width="1"
  />
</svg>
`;

exports[`Drawing Layer Components Freehand Line deletes a freehand line 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
/>
`;

exports[`Drawing Layer Components Freehand Line moves a freehand line 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M 5 5 l 1 1 l 2 2"
    fill="none"
    pointer-events="visible"
    stroke="#888888"
    stroke-dasharray=""
    stroke-width="1"
  />
</svg>
`;

exports[`Drawing Layer Components Image adds an image 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <image
    height="10"
    href="test-file-stub"
    pointer-events="visible"
    preserveAspectRatio="none"
    width="10"
    x="10"
    y="10"
  />
</svg>
`;

exports[`Drawing Layer Components Image deletes a image 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
/>
`;

exports[`Drawing Layer Components Image moves a image 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <image
    height="10"
    href="assets/logo_tw.png"
    pointer-events="visible"
    preserveAspectRatio="none"
    width="10"
    x="5"
    y="5"
  />
</svg>
`;

exports[`Drawing Layer Components Rectangle adds a Rectangle 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    class="rectangle"
    fill="#cccccc"
    height="10"
    pointer-events="visible"
    stroke="#888888"
    stroke-dasharray=""
    stroke-width="1"
    width="10"
    x="10"
    y="10"
  />
</svg>
`;

exports[`Drawing Layer Components Rectangle deletes a rectangle 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
/>
`;

exports[`Drawing Layer Components Rectangle moves a rectangle 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <rect
    class="rectangle"
    fill="#cccccc"
    height="10"
    pointer-events="visible"
    stroke="#888888"
    stroke-dasharray=""
    stroke-width="1"
    width="10"
    x="5"
    y="5"
  />
</svg>
`;

exports[`Drawing Layer Components Vector arrow adds a Vector arrow 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="vector"
    fill="#777777"
    pointer-events="visible"
    stroke="#777777"
    stroke-dasharray=""
    stroke-width="2"
  >
    <line
      x1="20"
      x2="40"
      y1="20"
      y2="40"
    />
    <g
      transform="translate(40 40) rotate(135)"
    >
      <polygon
        points="0 0 4.5 9 -4.5 9 0 0"
      />
    </g>
    <g
      transform="translate(20 20) rotate(315)"
    >
      <polygon
        points="0 0 4.5 9 -4.5 9 0 0"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector arrow changes vector type 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="vector"
    fill="#777777"
    pointer-events="visible"
    stroke="#777777"
    stroke-dasharray=""
    stroke-width="2"
  >
    <line
      x1="20"
      x2="40"
      y1="20"
      y2="40"
    />
    <g
      transform="translate(40 40) rotate(135)"
    >
      <polygon
        points="0 0 4.5 9 -4.5 9 0 0"
      />
    </g>
    <g
      transform="translate(20 20) rotate(315)"
    >
      <polygon
        points="0 0 4.5 9 -4.5 9 0 0"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector arrow deletes a vector arrow 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
/>
`;

exports[`Drawing Layer Components Vector arrow moves a vector arrow 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="vector"
    fill="#777777"
    pointer-events="visible"
    stroke="#777777"
    stroke-dasharray=""
    stroke-width="2"
  >
    <line
      x1="5"
      x2="25"
      y1="5"
      y2="25"
    />
    <g
      transform="translate(25 25) rotate(135)"
    >
      <polygon
        points="0 0 4.5 9 -4.5 9 0 0"
      />
    </g>
    <g
      transform="translate(5 5) rotate(315)"
    >
      <polygon
        points="0 0 4.5 9 -4.5 9 0 0"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector line adds a Vector line 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="vector"
    fill="#888888"
    pointer-events="visible"
    stroke="#888888"
    stroke-dasharray=""
    stroke-width="1"
  >
    <line
      x1="10"
      x2="20"
      y1="10"
      y2="20"
    />
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector line deletes a vector line 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
/>
`;

exports[`Drawing Layer Components Vector line moves a vector line 1`] = `
<svg
  height="1500"
  width="1500"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="vector"
    fill="#888888"
    pointer-events="visible"
    stroke="#888888"
    stroke-dasharray=""
    stroke-width="1"
  >
    <line
      x1="5"
      x2="15"
      y1="5"
      y2="15"
    />
  </g>
</svg>
`;
